# EasyCardGUIDesktop

./: .gitignore  .pdm-python  LICENSE  Makefile  README.md  app.py  db.json  main.py  package.json  pyproject.toml  requirements.txt
components/: __init__.py  addCardForm.py  animatedGif.py  barChart.py  card.py  cardChart.py  dialog.py  dragAndDrop.py  loader.py  modal.py  navigation.py  notify.py  pieChart.py  table.py  toast.py  updateCardRow.py
components/ui/: __init__.py  button.py  image.py  input.py  inputLabel.py  label.py  progressBar.py  separator.py  seprater.py  textarea.py
config/: settings.py
models/: creditCard.py  types.py
screens/: __init__.py  dashboardScreen.py  dataScreen.py  loginScreen.py  newCardScreen.py  settingScreen.py  splashScreen.py
services/: authService.py  authServiceImpl.py  chartService.py  creditCardInterface.py  creditCardService.py  creditCardServiceImpl.py  matplotlibService.py
utils/: __init__.py  validator.py
