[project]
name = "EasyCardGUIDesktop"
version = "0.1.0"
description = "EasyCardGUIDesktop is a graphical user interface (GUI) application designed to complement the EasyCardBackend project. This desktop application provides a user-friendly interface for managing credit cards and utilizes artificial intelligence to extract credit card numbers from images."
authors = [
    {name = "Macktireh", email = "abdimack97@gmail.com"},
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "customtkinter>=5.2.2",
    "CTkToolTip>=0.8",
    "httpx>=0.27.0",
    "matplotlib>=3.9.1",
    "packaging>=24.1",
    "python-dotenv>=1.0.1",
    "Pillow>=10.4.0",
    "tkinterdnd2>=0.3.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.3",
]


[tool.pdm.scripts]
start = "python main.py"
coverage = "coverage report -m && coverage html"
rufffix = "ruff --fix --exit-zero ."
ruffformat = "ruff format ."
ruffcheck = "ruff check ."
exports = "pdm export -f requirements --without-hashes"
ruff = {composite = ["rufffix", "ruffformat", "ruffcheck"]}


[tool.pdm]
distribution = false


[tool.ruff]
line-length = 130
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
